fix wrapping with multiple commits under one push

--- a/src/components/github.css
+++ b/src/components/github.css
@@ -15,5 +15,5 @@
 }
 
 .github-activity span {
-    display: inline-block;
+    display: block;
 }
